--- a/app/assets/javascripts/index.html
+++ b/app/assets/javascripts/index.html
@@ -3,40 +3,10 @@
     <title>LearnExchange</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
   </head>
-  <body ng-app="learnExchange" ng-controller="MainController">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="page-header">
-            <h1>learnExchange</h1>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-          <div class="col-md-12" ng-repeat="question in questions | orderBy: '-votes'">
-             <span ng-click="incrementUpvotes(question)">^</span>
-            {{question.body}} - {{question.votes}}
-          </div>
-      </div>
-      <div class="row">
-          <div class="col-md-12">
-            <h1>Ask a Question</h1>
-            <form ng-submit="addQuestion()">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Ask..." ng-model="body"></input>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Link to Lesson" ng-model="lessonLink"></input>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Link to Github Repo" ng-model="githubLink"></input>
-              </div>
-              <button type="submit" class="btn btn-primary">Question</button>
-            </form>
-          </div>
-    </div>
+  <body ng-app="learnExchange">
+    <ui-view></ui-view>
   </body>
 </html>
